# puruspe

./: Cargo.toml  LICENSE-MIT  README.md  RELEASES.md
.github/workflows/: rust.yml
examples/: bessel_fractional_test.rs  bessel_integer_test.rs  bessel_test.rs  modified_bessel_fractional_test.rs  modified_bessel_integer_test.rs
scripts/: bessel_table.py  beta_table.py  error_table.py  gamma_table.py  lambert_w_table.py  table_from_scipy.py
src/: bessel.rs  beta.rs  dawson.rs  erfcx.rs  error.rs  faddeeva.rs  gamma.rs  lambert_w.rs  lib.rs  local_lambert_w.rs  tests.rs  utils.rs
src/bessel/: cache_iterators.rs  mod.rs
src/complex/: erfcx.rs  erfcx_chebyshev_coeffs.rs  faddeeva.rs  faddeeva_taylor_coeffs.rs  mod.rs
tests/: bessel_test.rs  beta_test.rs  dawson_test.rs  erf_test.rs  erfcx_test.rs  factorial_test.rs  faddeeva_test.rs  gamma_test.proptest-regressions  gamma_test.rs  gammp_test.rs  lambert_w_test.rs
