[package]
name = "puruspe"
version = "0.2.5"
authors = ["Axect <axect@outlook.kr>"]
description = "Pure Rust Special function library"
edition = "2018"
repository = "https://github.com/Axect/puruspe"
categories = ["science"]
keywords = ["gamma", "special", "beta", "erf"]
exclude = ["src/bin/", "examples/", "scripts/"]
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html", "--cfg", "docsrs"]

[dependencies]
lambert_w = { version = "0.5.2", default-features = false, features = ["24bits", "50bits", "std"] }

[dev-dependencies]
peroxide = { version = "0.37", features = ["plot"] }
approx = "0.5"
