[package]
name = "puruspe"
version = "0.4.1"
authors = ["Axect <axect@outlook.kr>"]
description = "Pure Rust Special function library"
edition = "2018"
repository = "https://github.com/Axect/puruspe"
categories = ["science"]
keywords = ["gamma", "special", "beta", "erf"]
exclude = ["src/bin/", "examples/", "scripts/"]
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html", "--cfg", "docsrs"]

[dependencies]
lambert_w = { version = "1.2.10", default-features = false, features = ["std"] }
num-complex = { version = "0.4" }

[dev-dependencies]
peroxide = { version = "0.39", features = ["plot"] }
approx = "0.5"
proptest = "1.6.0"
