[package]
name = "puruspe"
version = "0.4.3"
authors = ["Axect <axect@outlook.kr>"]
description = "Pure Rust Special function library"
edition = "2018"
repository = "https://github.com/Axect/puruspe"
categories = ["science", "mathematics"]
keywords = ["gamma", "special", "beta", "erf"]
exclude = ["src/bin/", "examples/", "scripts/"]
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html", "--cfg", "docsrs"]

[dependencies]
lambert_w = { version = "1.2.34", default-features = false, features = ["std"] }
num-complex = { version = "0.4.6" }

[dev-dependencies]
peroxide = { version = "0.40.2", features = ["plot"] }
approx = "0.5.1"
proptest = "1.10.0"
